--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "chess.js": "^0.12.0",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.7",
-    "lodash": "^4.17.21",
     "next": "13.4.7",
     "react": "18.2.0",
     "react-chessboard": "^3.1.0",
@@ -28,6 +27,7 @@
   "devDependencies": {
     "@types/lodash": "^4.14.196",
     "@types/node": "20.4.2",
-    "@types/react": "18.2.15"
+    "@types/react": "18.2.15",
+    "typescript": "5.2.2"
   }
 }
