--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "chess.js": "^0.12.0",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.7",
+    "million": "latest",
     "next": "13.4.7",
     "react": "18.2.0",
     "react-chessboard": "^3.1.0",
