--- a/package.json
+++ b/package.json
@@ -17,18 +17,18 @@
     "@types/chess.js": "^0.13.4",
     "brain.js": "^2.0.0-beta.23",
     "chess.js": "^0.12.0",
-    "eslint": "8.44.0",
-    "eslint-config-next": "13.4.7",
+    "eslint": "latest",
+    "eslint-config-next": "latest",
     "million": "latest",
-    "next": "13.4.7",
-    "react": "18.2.0",
+    "next": "latest",
+    "react": "latest",
     "react-chessboard": "^3.1.0",
-    "react-dom": "18.2.0"
+    "react-dom": "latest"
   },
   "devDependencies": {
-    "@types/lodash": "^4.14.196",
-    "@types/node": "20.4.2",
-    "@types/react": "18.2.15",
-    "typescript": "5.2.2"
+    "@types/lodash": "latest",
+    "@types/node": "latest",
+    "@types/react": "latest",
+    "typescript": "latest"
   }
 }
