--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mantine/core": "^6.0.15",
     "@mantine/hooks": "^6.0.15",
     "@mantine/next": "^6.0.15",
+    "@tauri-apps/api": "^1.5.1",
     "@types/chess.js": "^0.13.4",
     "brain.js": "^2.0.0-beta.23",
     "chess.js": "^0.12.0",
@@ -26,6 +27,7 @@
     "react-dom": "latest"
   },
   "devDependencies": {
+    "@tauri-apps/cli": "^1.5.6",
     "@types/lodash": "latest",
     "@types/node": "latest",
     "@types/react": "latest",
