--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/server": "^11.11.0",
-    "@mantine/core": "^6.0.15",
-    "@mantine/hooks": "^6.0.15",
-    "@mantine/next": "^6.0.15",
+    "@mantine/core": "latest",
+    "@mantine/hooks": "latest",
+    "@mantine/next": "latest",
     "@tauri-apps/api": "^1.5.1",
     "@types/chess.js": "^0.13.4",
     "brain.js": "^2.0.0-beta.23",
-    "chess.js": "^0.12.0",
+    "chess.js": "latest",
     "eslint": "latest",
     "eslint-config-next": "latest",
     "million": "latest",
