--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -22,7 +22,7 @@ tauri-build = { version = "1.5.0", features = [] }
 [dependencies]
 serde_json = "1.0.108"
 serde = { version = "1.0.193", features = ["derive"] }
-tauri = { version = "1.5.2", features = [] }
+tauri = { version = "1.5.2", features = ["fs-write-file"] }
 tokio = { version = "1.34.0", features = ["full"] }
 lazy_static = "1.4.0"
 shakmaty = "0.26.0"
