--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -20,13 +20,12 @@ strip = true
 tauri-build = { version = "1.5.1", features = [] }
 
 [dependencies]
-serde_json = "1.0.111"
 serde = { version = "1.0.195", features = ["derive"] }
 tauri = { version = "1.5.4", features = ["fs-write-file"] }
 tokio = { version = "1.35.1", features = ["full"] }
-lazy_static = "1.4.0"
-shakmaty = "0.26.0"
 rand = "0.8.5"
+once_cell = "1.19.0"
+shakmaty = "0.26.0"
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
